--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/testDB
-spring.datasource.username=postgres
-spring.datasource.password=Fala&123UFS
+spring.datasource.url=jdbc:postgresql://johnny.heliohost.org:5432/anielcrz_falaufs
+spring.datasource.username=anielcrz_base
+spring.datasource.password=F@laUFS2020
 
 spring.datasource.driver-class-name=org.postgresql.Driver
